# c-course-practice

./: CMakeLists.txt  main.c
04-02-26/: stdio.c  stdio.h
06-02-26/: operators.c  operators.h
09-02-26/: data-types.c  data-types.h
15-02-26/: c-practice.c  c-practice.h
25-02-26/time-library/: time-lib.c  time-lib.h
functions/: functions.c  functions.h
